# lcirc

./: .gitignore  .gitmodules  CMakeLists.txt  GNUmakefile  README.md
.copr/: Makefile
deb/: control  copyright
include/lcirc/: lc_irc.h
rpm/: lcirc.spec
src/: lc_irc.cpp
