cmake_minimum_required (VERSION 3.9.0)
if (POLICY CMP0111)
cmake_policy(SET CMP0111 OLD)
endif ()
project (lc_rc)
include_directories (
include
${CMAKE_SOURCE_DIR}/linecook/include
${CMAKE_SOURCE_DIR}/pcre2
)
if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
add_definitions(/DPCRE2_STATIC)
if ($<CONFIG:Release>)
add_compile_options (/arch:AVX2 /GL /std:c11 /wd5105)
else ()
add_compile_options (/arch:AVX2 /std:c11 /wd5105)
endif ()
if (NOT TARGET pcre2-32-static)
add_library (pcre2-32-static STATIC IMPORTED)
set_property (TARGET pcre2-32-static PROPERTY IMPORTED_LOCATION_DEBUG ../pcre2/build/Debug/pcre2-32-staticd.lib)
set_property (TARGET pcre2-32-static PROPERTY IMPORTED_LOCATION_RELEASE ../pcre2/build/Release/pcre2-32-static.lib)
include_directories (../pcre2/build)
else ()
include_directories (${CMAKE_BINARY_DIR}/pcre2)
endif ()
if (NOT TARGET linecook)
add_library (linecook STATIC IMPORTED)
set_property (TARGET linecook PROPERTY IMPORTED_LOCATION_DEBUG ../linecook/build/Debug/linecook.lib)
set_property (TARGET linecook PROPERTY IMPORTED_LOCATION_RELEASE ../linecook/build/Release/linecook.lib)
endif ()
else ()
add_compile_options (-Wall -Wextra -Werror -ggdb -fno-omit-frame-pointer)
if (TARGET pcre2-32-static)
include_directories (${CMAKE_BINARY_DIR}/pcre2)
endif ()
if (NOT TARGET linecook)
add_library (linecook STATIC IMPORTED)
set_property (TARGET linecook PROPERTY IMPORTED_LOCATION ../linecook/build/liblinecook.a)
endif ()
endif ()
if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
set (ws_lib ws2_32)
endif ()
if (TARGET pcre2-32-static)
link_libraries (linecook pcre2-32-static ${ws_lib})
else ()
link_libraries (linecook -lpcre2-32)
endif ()
add_executable (lcirc src/lc_irc.cpp)
